--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,16 @@
   <name>wendao Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <properties>
+    <!--<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
     <org.springframework.version>4.0.4.RELEASE</org.springframework.version>
     <org.springframework.security.version>4.0.4.RELEASE</org.springframework.security.version>
     <org.apache.tiles.version>3.0.5</org.apache.tiles.version>
     <org.codehaus.jackson.version>1.9.13</org.codehaus.jackson.version>
     <org.aspectj.version>1.8.8</org.aspectj.version>
+    <!--<druid.version>1.0.20</druid.version>
+    <fastjson.version>1.2.11</fastjson.version>
+    <slf4j.version>1.7.5</slf4j.version>
+    <slf4j-log4j12.version>1.7.2</slf4j-log4j12.version>-->
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
@@ -88,7 +93,12 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
-
+    <!--<dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
+      <scope>provided</scope>
+    </dependency>-->
     <dependency>
       <groupId>org.apache.tiles</groupId>
       <artifactId>tiles-core</artifactId>
@@ -174,6 +184,48 @@
       <artifactId>javax.servlet-api</artifactId>
       <version>3.1.0</version>
       <scope>provided</scope>
+    </dependency>
+    <!--<dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>druid</artifactId>
+      <version>${druid.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>${fastjson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.yunpian.sdk</groupId>
+      <artifactId>yunpian-java-sdk</artifactId>
+      <version>1.2.3</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>21.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcprov-jdk15on</artifactId>
+      <version>1.47</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.8.8</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>-->
+
+    <!-- javamail -->
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+      <version>1.4.5</version>
     </dependency>
   </dependencies>
   <build>
